--- a/process_sc_data.ipynb
+++ b/process_sc_data.ipynb
@@ -1465,8 +1465,10 @@
    "main_language": "python",
    "notebook_metadata_filter": "-all"
   },
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python (bioinf)",
+   "language": "python",
+   "name": "bioinf"
   }
  },
  "nbformat": 4,
