--- a/process_sc_data.ipynb
+++ b/process_sc_data.ipynb
@@ -2263,8 +2263,14 @@
    "main_language": "python",
    "notebook_metadata_filter": "-all"
   },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
